Исправляет часть багов после 1го тестирования

--- a/source/proposal-page-voting-var2.html
+++ b/source/proposal-page-voting-var2.html
@@ -29,13 +29,13 @@
               <span class="project-vote__expire-value">56 дней</span>&nbsp;до завершения
             </p>
             <div class="project-vote__like-counter">
-              <span>Всего проголосовало: 504</spans=>
+              <span>Всего проголосовало: 504</span>
               <p>Выберите вариант дизайн-проекта для&nbsp;благоустройства территорий</p>
-              <button type="button" class="button button--blue">ПРОГОЛОСОВАТЬ</button>
+              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
               <div class="project-vote__like-wrapper">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
-                  <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked class="js-projects__item-link">
-                  <label for="checkbox-2"></label>
+                  <input type="checkbox" name="checkbox" id="checkbox-1" value="checkbox-1" checked class="js-projects__item-link">
+                  <label for="checkbox-1"></label>
                 </div>
                 <span>Ваш голос учтён</span>
               </div>
@@ -319,8 +319,8 @@
                   </a>
                 </div>
               </div>
-              <button type="button" class="button button--blue">ПРОГОЛОСОВАТЬ</button>
-              <div class="proposal-list__like-counter js-like-counter">
+              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
+              <div class="proposal-list__like-counter">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
                   <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
                   <label for="checkbox-2"></label>
@@ -336,7 +336,7 @@
               </svg>
             </button>
           </div>
-          <div class="proposal__project">
+          <div class="proposal__project proposal__project--opened">
             <div class="proposal__project-wrapper">
               <div class="form-radio">
                 <input type="radio" name="radio" id="radio-2" value="radio-2" checked>
@@ -347,7 +347,7 @@
                   <h3 class="proposal__project-title">Вариант №2</h3>
                   <span>Всего проголосовало: 504</span>
                 </div>
-                <p class="proposal__project-text">
+                <p class="proposal__project-text opened">
                   Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста.
                 </p>
               </div>
@@ -364,9 +364,9 @@
               </div>
             </div>
             <div
-              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal  opened"
               style="cursor: grab;">
-              <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
+              <div class="gallery__tape swiper-wrapper opened" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
                   <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-1@2x.png" target="_blank"
                     aria-label="описание картинки" data-index="0">
@@ -474,17 +474,17 @@
                 </div>
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-              <button type="button" class="button button--blue">ПРОГОЛОСОВАТЬ</button>
-              <div class="proposal-list__like-counter js-like-counter">
+              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
+              <div class="proposal-list__like-counter">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
-                  <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
-                  <label for="checkbox-2"></label>
+                  <input type="checkbox" name="checkbox" id="checkbox-3" value="checkbox-3" checked>
+                  <label for="checkbox-3"></label>
                 </div>
                 <span>Вы выбрали данный дизайн-проект</span>
               </div>
             </div>
-            <button class="proposal__project-details button-details">
-              <span class="button-details__text button-details__text">Подробнее</span>
+            <button class="proposal__project-details button-details opened">
+              <span class="button-details__text button-details__text">Свернуть</span>
               <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9833 0L7 4.97297L2.01667 0L0.5 1.51351L7 8L13.5 1.51351L11.9833 0Z" fill="#2C8ECC"/>
                 </svg>
@@ -628,11 +628,11 @@
                 </div>
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-              <button type="button" class="button button--blue">ПРОГОЛОСОВАТЬ</button>
+              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
               <div class="proposal-list__like-counter js-like-counter">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
-                  <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
-                  <label for="checkbox-2"></label>
+                  <input type="checkbox" name="checkbox" id="checkbox-4" value="checkbox-4" checked>
+                  <label for="checkbox-4"></label>
                 </div>
                 <span>Вы выбрали данный дизайн-проект</span>
               </div>
