--- a/source/proposal-page-voting-var4.html
+++ b/source/proposal-page-voting-var4.html
@@ -31,7 +31,7 @@
             <div class="project-vote__like-counter js-like-counter">
               <span>Всего проголосовало: 504</span>
               <p>Выберите вариант дизайн-проекта для&nbsp;благоустройства территорий</p>
-              <button type="button" class="button button--blue">ПРОГОЛОСОВАТЬ</button>
+              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
             </div>
           </div>
         </div>
@@ -316,7 +316,7 @@
                   </a>
                 </div>
               </div>
-              <button type="button" class="button button--blue">ПРОГОЛОСОВАТЬ</button>
+              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
               <div class="proposal-list__like-counter js-like-counter">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
                   <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
@@ -471,7 +471,7 @@
                 </div>
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-              <button type="button" class="button button--blue">ПРОГОЛОСОВАТЬ</button>
+              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
               <div class="proposal-list__like-counter js-like-counter">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
                   <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
@@ -625,7 +625,7 @@
                 </div>
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-              <button type="button" class="button button--blue">ПРОГОЛОСОВАТЬ</button>
+              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
               <div class="proposal-list__like-counter js-like-counter">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
                   <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
@@ -646,11 +646,11 @@
           <div class="proposal__milestones-item proposal__project">
             <time>2021-12-12</time>
             <h3>Очистка территории</h3>
-            <p class="proposal__project-text">Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения</p>
+            <p class="proposal__project-text opened">Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения</p>
               <div
-              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal opened"
               style="cursor: grab;">
-              <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
+              <div class="gallery__tape swiper-wrapper opened" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
                   <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-1@2x.png" target="_blank"
                     aria-label="описание картинки" data-index="0">
@@ -759,8 +759,8 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
             </div>
-            <button class="proposal__milestones-details button-details">
-              <span class="button-details__text">Подробнее</span>
+            <button class="proposal__milestones-details button-details opened">
+              <span class="button-details__text">Свернуть</span>
               <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9833 0L7 4.97297L2.01667 0L0.5 1.51351L7 8L13.5 1.51351L11.9833 0Z" fill="#2C8ECC"/>
               </svg>
