Устраняет замечания после 2го тестирования

--- a/source/proposal-page-voting-var3.html
+++ b/source/proposal-page-voting-var3.html
@@ -29,14 +29,13 @@
               <span class="project-vote__expire-value">56 дней</span>&nbsp;до завершения
             </p>
             <div class="project-vote__like-counter js-like-counter">
-              <span>Всего проголосовало: 504</spans>
+              <span>Всего проголосовало: 504</span>
               <p>Выберите вариант дизайн-проекта для&nbsp;благоустройства территорий</p>
               <div class="project-vote__like-counter">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
                   <input type="checkbox" name="checkbox" id="checkbox-1" value="checkbox-1" checked>
-                  <label for="checkbox-1"></label>
+                  <label for="checkbox-1"><span>Ваш голос учтён</span></label>
                 </div>
-                <span class="project-vote__rezult">Ваш голос учтён</span>
               </div>
             </div>
           </div>
@@ -183,17 +182,17 @@
           <h2 class="subtitle subtitle--large">Выберите дизайн-проект для реализации этой&nbsp;территории</h2>
           <div class="proposal__project">
             <div class="proposal__project-wrapper">
-              <div class="form-radio">
-                <input type="radio" name="radio" id="radio-1" value="radio-1">
-                <label for="radio-1"></label>
-              </div>
               <div class="proposal__project-desc">
                 <div class="proposal__project-head">
+                  <div class="form-radio">
+                    <input type="radio" name="radio" id="radio-1" value="radio-1">
+                    <label for="radio-1"></label>
+                  </div>
                   <h3 class="proposal__project-title">Вариант №1</h3>
                   <span>Всего проголосовало: 504</span>
                 </div>
                 <p class="proposal__project-text">
-                  Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста.
+                  Рыбные тексты также применяются для демонстрации разных видов шрифта и в разработке макетов. Как правило содержание бессмысленно. По причине функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста.
                 </p>
               </div>
               <div class="proposal__project-img">
@@ -330,17 +329,17 @@
           </div>
           <div class="proposal__project">
             <div class="proposal__project-wrapper">
-              <div class="form-radio">
-                <input type="radio" name="radio" id="radio-2" value="radio-2" checked>
-                <label for="radio-2"></label>
-              </div>
               <div class="proposal__project-desc">
                 <div class="proposal__project-head">
+                  <div class="form-radio">
+                    <input type="radio" name="radio" id="radio-2" value="radio-2" checked>
+                    <label for="radio-2"></label>
+                  </div>
                   <h3 class="proposal__project-title">Вариант №2</h3>
                   <span>Всего проголосовало: 504</span>
                 </div>
                 <p class="proposal__project-text opened">
-                  Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста.
+                  Рыбные тексты также применяются для демонстрации разных видов шрифта и в разработке макетов. Как правило содержание бессмысленно. По причине функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста.
                 </p>
               </div>
               <div class="proposal__project-img">
@@ -484,17 +483,17 @@
           </div>
           <div class="proposal__project">
             <div class="proposal__project-wrapper">
-              <div class="form-radio">
-                <input type="radio" name="radio" id="radio-3" value="radio-3">
-                <label for="radio-3"></label>
-              </div>
               <div class="proposal__project-desc">
                 <div class="proposal__project-head">
+                  <div class="form-radio">
+                    <input type="radio" name="radio" id="radio-3" value="radio-3">
+                    <label for="radio-3"></label>
+                  </div>
                   <h3 class="proposal__project-title">Вариант №3</h3>
                   <span>Всего проголосовало: 504</span>
                 </div>
                 <p class="proposal__project-text">
-                  Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста.
+                  Рыбные тексты также применяются для демонстрации разных видов шрифта и в разработке макетов. Как правило содержание бессмысленно. По причине функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста.
                 </p>
               </div>
               <div class="proposal__project-img">
