--- a/source/proposal-page-voting-var2.html
+++ b/source/proposal-page-voting-var2.html
@@ -198,7 +198,7 @@
                 </p>
               </div>
               <div class="proposal__project-img">
-                <a class="proposal__project-link gallery__item-link js-gallery__item-link" href="img/img-project/project-img-1@2x.png" target="_blank"
+                <a class="proposal__project-link gallery__item-link" href="img/img-project/project-img-1@2x.png" target="_blank"
                   aria-label="описание картинки" data-index="0">
                   <figure class="proposal__project-figure gallery__item">
                     <img width="230" height="140" class="gallery__item-img" src="img/img-project/project-img-1@2x.png"
@@ -352,7 +352,7 @@
                 </p>
               </div>
               <div class="proposal__project-img">
-                <a class="proposal__project-link gallery__item-link js-gallery__item-link" href="img/img-project/project-img-2@2x.png" target="_blank"
+                <a class="proposal__project-link gallery__item-link" href="img/img-project/project-img-2@2x.png" target="_blank"
                   aria-label="описание картинки" data-index="0">
                   <figure class="proposal__project-figure gallery__item">
                     <img width="230" height="140" class="gallery__item-img" src="img/img-project/project-img-2@2x.png"
@@ -506,10 +506,10 @@
                 </p>
               </div>
               <div class="proposal__project-img">
-                <a class="proposal__project-link gallery__item-link js-gallery__item-link" href="img/img-project/rect5.jpg" target="_blank"
+                <a class="proposal__project-link gallery__item-link" href="img/img-project/project-img-3@2x.png" target="_blank"
                   aria-label="описание картинки" data-index="0">
                   <figure class="proposal__project-figure gallery__item">
-                    <img width="230" height="140" class="gallery__item-img" src="img/img-project/rect5.jpg"
+                    <img width="230" height="140" class="gallery__item-img" src="img/img-project/project-img-3@2x.png"
                       alt="описание картинки">
                     <figcaption class="gallery__item-text">
                     </figcaption>
