Выправляет страницы на мобиле, вносит изменения в верстку

--- a/source/proposal-page-voting-var4.html
+++ b/source/proposal-page-voting-var4.html
@@ -183,11 +183,13 @@
             <div class="proposal__project-wrapper">
               <div class="proposal__project-desc">
                 <div class="proposal__project-head">
-                  <div class="form-radio">
-                    <input type="radio" name="radio" id="radio-1" value="radio-1">
-                    <label for="radio-1"></label>
+                  <div class="proposal__variant-wrapper">
+                    <div class="form-radio">
+                      <input type="radio" name="radio" id="radio-1" value="radio-1">
+                      <label for="radio-1"></label>
+                    </div>
+                    <h3 class="proposal__project-title">Вариант №1</h3>
                   </div>
-                  <h3 class="proposal__project-title">Вариант №1</h3>
                   <span>Всего проголосовало: 504</span>
                 </div>
                 <p class="proposal__project-text">
@@ -337,11 +339,13 @@
             <div class="proposal__project-wrapper">
               <div class="proposal__project-desc">
                 <div class="proposal__project-head">
-                  <div class="form-radio">
-                    <input type="radio" name="radio" id="radio-2" value="radio-2" checked>
-                    <label for="radio-2"></label>
+                  <div class="proposal__variant-wrapper">
+                    <div class="form-radio">
+                      <input type="radio" name="radio" id="radio-2" value="radio-2" checked>
+                      <label for="radio-2"></label>
+                    </div>
+                    <h3 class="proposal__project-title">Вариант №2</h3>
                   </div>
-                  <h3 class="proposal__project-title">Вариант №2</h3>
                   <span>Всего проголосовало: 504</span>
                 </div>
                 <p class="proposal__project-text">
@@ -491,11 +495,13 @@
             <div class="proposal__project-wrapper">
               <div class="proposal__project-desc">
                 <div class="proposal__project-head">
-                  <div class="form-radio">
-                    <input type="radio" name="radio" id="radio-3" value="radio-3">
-                    <label for="radio-3"></label>
+                  <div class="proposal__variant-wrapper">
+                    <div class="form-radio">
+                      <input type="radio" name="radio" id="radio-3" value="radio-3">
+                      <label for="radio-3"></label>
+                    </div>
+                    <h3 class="proposal__project-title">Вариант №3</h3>
                   </div>
-                  <h3 class="proposal__project-title">Вариант №3</h3>
                   <span>Всего проголосовало: 504</span>
                 </div>
                 <p class="proposal__project-text">
