Чинит аккордеоны в открытом попапе дизайн-проектов

--- a/source/proposal-page-voting-var2.html
+++ b/source/proposal-page-voting-var2.html
@@ -212,7 +212,7 @@
               </div>
             </div>
             <div
-              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+              class="project__gallery proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
@@ -368,7 +368,7 @@
               </div>
             </div>
             <div
-              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal  opened"
+              class="project__gallery proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal opened"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper opened" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
@@ -524,7 +524,7 @@
               </div>
             </div>
             <div
-              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+              class="project__gallery proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
@@ -700,7 +700,7 @@
   <div class="projects-popup projects-popup--proposal js-projects-popup popup js-popup">
     <div class="popup__container">
       <div class="popup__overlay js-popup__overlay"></div>
-      <div class="projects-popup__content popup__content">
+      <div class="projects-popup__content popup__content popup__content--projects">
         <div class="popup__bar popup__bar--top">
           <button class="popup__close-btn js-popup__close-btn" type="button">
             <span class="visually-hidden">Закрыть</span>
@@ -710,6 +710,7 @@
           </button>
         </div>
         <div class="proposal__projects">
+          <h2 class="subtitle subtitle--large">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях</h2>
           <h2 class="subtitle subtitle--large">Выберите дизайн-проект для реализации этой&nbsp;территории</h2>
           <div class="proposal__project">
             <div class="proposal__project-wrapper">
@@ -741,7 +742,7 @@
               </div>
             </div>
             <div
-              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+              class="project__gallery proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
@@ -897,7 +898,7 @@
               </div>
             </div>
             <div
-              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal  opened"
+              class="project__gallery proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal  opened"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper opened" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
@@ -1053,7 +1054,7 @@
               </div>
             </div>
             <div
-              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+              class="project__gallery proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
