--- a/source/proposal-page-voting-var3.html
+++ b/source/proposal-page-voting-var3.html
@@ -28,12 +28,12 @@
               </svg>
               <span class="project-vote__expire-value">56 дней</span>&nbsp;до завершения
             </p>
-            <div class="project-vote__like-counter js-like-counter">
+            <div class="project-vote__like-counter">
               <span>Всего проголосовало: 504</span>
               <p>Выберите вариант дизайн-проекта для&nbsp;благоустройства территорий</p>
               <div class="project-vote__like-counter">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
-                  <input type="checkbox" name="checkbox" id="checkbox-1" value="checkbox-1" checked>
+                  <input type="checkbox" name="checkbox" id="checkbox-1" value="checkbox-1" checked disabled>
                   <label for="checkbox-1"><span>Ваш голос учтён</span></label>
                 </div>
               </div>
