Чинит аккордеоны, на страницах и попапах, исправляет чекбоксы, скрывает синюю кнопку и показывает полпись вы проголосовали, активирует попап на странице improvement-list-var2, подправляет адаптив для таблеты и  мобилы, адаптив попапа

--- a/source/proposal-page-voting-var4.html
+++ b/source/proposal-page-voting-var4.html
@@ -28,7 +28,7 @@
               </svg>
               <span class="project-vote__expire-value">56 дней</span>&nbsp;до завершения
             </p>
-            <div class="project-vote__like-counter js-like-counter">
+            <div class="project-vote__like-counter">
               <span>Всего проголосовало: 504</span>
               <p>Выберите вариант дизайн-проекта для&nbsp;благоустройства территорий</p>
               <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
@@ -319,10 +319,10 @@
                 </div>
               </div>
               <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
-              <div class="proposal-list__like-counter js-like-counter">
+              <div class="proposal-list__like-counter">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
-                  <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
-                  <label for="checkbox-2"></label>
+                  <input type="checkbox" name="checkbox" id="checkbox-1" value="checkbox-1" checked>
+                  <label for="checkbox-1"></label>
                 </div>
                 <span>Вы выбрали данный дизайн-проект</span>
               </div>
@@ -476,7 +476,7 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
               <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
-              <div class="proposal-list__like-counter js-like-counter">
+              <div class="proposal-list__like-counter">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
                   <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
                   <label for="checkbox-2"></label>
@@ -632,10 +632,10 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
               <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
-              <div class="proposal-list__like-counter js-like-counter">
+              <div class="proposal-list__like-counter">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
-                  <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
-                  <label for="checkbox-2"></label>
+                  <input type="checkbox" name="checkbox" id="checkbox-3" value="checkbox-3" checked>
+                  <label for="checkbox-3"></label>
                 </div>
                 <span>Вы выбрали данный дизайн-проект</span>
               </div>
@@ -777,7 +777,7 @@
             <h3>Очистка территории</h3>
             <p class="proposal__project-text proposal__project-text--stage">Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения</p>
               <div
-              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal proposal__gallery--stage"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
@@ -900,7 +900,7 @@
             <h3>Очистка территории</h3>
             <p class="proposal__project-text proposal__project-text--stage">Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения</p>
               <div
-              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+              class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal proposal__gallery--stage"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
