--- a/source/proposal-page-voting-var2.html
+++ b/source/proposal-page-voting-var2.html
@@ -635,7 +635,7 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
               <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
-              <div class="proposal-list__like-counter js-like-counter">
+              <div class="proposal-list__like-counter">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
                   <input type="checkbox" name="checkbox" id="checkbox-4" value="checkbox-4" checked>
                   <label for="checkbox-4"></label>
@@ -1165,7 +1165,7 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
               <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
-              <div class="proposal-list__like-counter js-like-counter">
+              <div class="proposal-list__like-counter">
                 <div class="form-checkbox form-checkbox--round form-checkbox--white">
                   <input type="checkbox" name="checkbox" id="checkbox-4" value="checkbox-4" checked>
                   <label for="checkbox-4"></label>
