Исправляет часть новых багов

--- a/source/proposal-page-voting-var2.html
+++ b/source/proposal-page-voting-var2.html
@@ -44,7 +44,7 @@
         </div>
         <div class="proposal__text-container">
           <p>
-            Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как
+            Рыбные тексты также применяются для?&nbsp;демонстрации различных видов шрифта и в разработке макетов. Как
             правило их содержание бессмысленно. По причине своей функции текста-заполнителя для макетов
             нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность,
             распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не
@@ -321,7 +321,9 @@
                   </a>
                 </div>
               </div>
-              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
+              <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+            </div>
+            <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
               <div class="proposal__project-mark">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="12" cy="12" r="11.25" stroke="#2C8ECC" stroke-width="1.5"/>
@@ -329,8 +331,6 @@
                 </svg>
                 <span>Вы выбрали данный дизайн-проект</span>
               </div>
-              <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-            </div>
             <button class="proposal__project-details button-details">
               <span class="button-details__text">Подробнее</span>
               <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -478,15 +478,15 @@
                 </div>
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
-              <div class="proposal__project-mark">
+            </div>
+            <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
+              <div class="proposal__project-mark opened">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="12" cy="12" r="11.25" stroke="#2C8ECC" stroke-width="1.5"/>
                   <path d="M7.19922 12.0004L11.0392 15.6004L16.7992 8.40039" stroke="#2C8ECC" stroke-width="1.5"/>
                 </svg>
                 <span>Вы выбрали данный дизайн-проект</span>
               </div>
-            </div>
             <button class="proposal__project-details button-details opened proposal__project--opened">
               <span class="button-details__text button-details__text">Свернуть</span>
               <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -634,7 +634,8 @@
                 </div>
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
+            </div>
+            <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
               <div class="proposal__project-mark">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="12" cy="12" r="11.25" stroke="#2C8ECC" stroke-width="1.5"/>
@@ -642,7 +643,6 @@
                 </svg>
                 <span>Вы выбрали данный дизайн-проект</span>
               </div>
-            </div>
             <button class="proposal__project-details button-details">
               <span class="button-details__text">Подробнее</span>
                 <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
