--- a/source/improvement-list-var2.html
+++ b/source/improvement-list-var2.html
@@ -233,7 +233,7 @@
                     <span>Всего проголосовало: 504</span>
                   </div>
                   <p class="proposal__project-text">
-                    Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста.
+                    Рыбные тексты также применяются для&nbsp;демонстрации различных видов шрифта и&nbsp;в&nbsp;разработке макетов. Как&nbsp;правило их содержание бессмысленно. По&nbsp;причине своей функции текста- заполнителя для&nbsp;макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и&nbsp;длины слов ничто не отвлекает от&nbsp;оценки воздействия и&nbsp;читаемости различных шрифтов, а&nbsp;также от&nbsp; распределения текста.
                   </p>
                 </div>
                 <div class="proposal__project-img">
@@ -359,7 +359,8 @@
                   </div>
                 </div>
                 <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-                <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
+              </div>
+              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
                 <div class="proposal__project-mark">
                   <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="12" cy="12" r="11.25" stroke="#2C8ECC" stroke-width="1.5"/>
@@ -367,7 +368,6 @@
                   </svg>
                   <span>Вы выбрали данный дизайн-проект</span>
                 </div>
-              </div>
               <button class="proposal__project-details button-details">
                 <span class="button-details__text">Подробнее</span>
                 <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -389,7 +389,7 @@
                     <span>Всего проголосовало: 504</span>
                   </div>
                   <p class="proposal__project-text opened">
-                    Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста.
+                    Рыбные тексты также применяются для&nbsp;демонстрации различных видов шрифта и&nbsp;в&nbsp;разработке макетов. Как&nbsp;правило их содержание бессмысленно. По&nbsp;причине своей функции текста- заполнителя для&nbsp;макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и&nbsp;длины слов ничто не отвлекает от&nbsp;оценки воздействия и&nbsp;читаемости различных шрифтов, а&nbsp;также от&nbsp; распределения текста.
                   </p>
                 </div>
                 <div class="proposal__project-img">
@@ -515,15 +515,15 @@
                 </div>
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
-              <div class="proposal__project-mark">
+            </div>
+            <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
+              <div class="proposal__project-mark opened">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="12" cy="12" r="11.25" stroke="#2C8ECC" stroke-width="1.5"/>
                   <path d="M7.19922 12.0004L11.0392 15.6004L16.7992 8.40039" stroke="#2C8ECC" stroke-width="1.5"/>
                 </svg>
                 <span>Вы выбрали данный дизайн-проект</span>
               </div>
-            </div>
               <button class="proposal__project-details button-details opened proposal__project--opened">
                 <span class="button-details__text button-details__text">Свернуть</span>
                 <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -545,7 +545,7 @@
                     <span>Всего проголосовало: 504</span>
                   </div>
                   <p class="proposal__project-text">
-                    Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей функции текста- заполнителя для макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста.
+                    Рыбные тексты также применяются для&nbsp;демонстрации различных видов шрифта и&nbsp;в&nbsp;разработке макетов. Как&nbsp;правило их содержание бессмысленно. По&nbsp;причине своей функции текста- заполнителя для&nbsp;макетов нечитабельность рыбных текстов имеет особое значение, так как человеческое восприятие имеет особенность, распознавать определенные образцы и повторения. В случае произвольного набора букв и&nbsp;длины слов ничто не отвлекает от&nbsp;оценки воздействия и&nbsp;читаемости различных шрифтов, а&nbsp;также от&nbsp; распределения текста.
                   </p>
                 </div>
                 <div class="proposal__project-img">
@@ -631,7 +631,7 @@
                     <a class="gallery__item-link js-gallery__item-link" href="img/img-project/project-img-4@2x.png" target="_blank"
                       aria-label="описание картинки" data-index="3">
                       <figure class="gallery__item">
-                        <img width="135" height="125" class="gallery__item-img" src="img/img-project/project-img-4@2x.png"
+                        <img width="135" height="135" class="gallery__item-img" src="img/img-project/project-img-4@2x.png"
                           alt="описание картинки">
                         <figcaption class="gallery__item-text">
                           Самый известный текст-«рыба», называемый Lorem ipsum,
@@ -671,7 +671,8 @@
                   </div>
                 </div>
                 <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-                <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
+              </div>
+              <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
                 <div class="proposal__project-mark">
                   <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="12" cy="12" r="11.25" stroke="#2C8ECC" stroke-width="1.5"/>
@@ -679,7 +680,6 @@
                   </svg>
                   <span>Вы выбрали данный дизайн-проект</span>
                 </div>
-              </div>
               <button class="proposal__project-details button-details">
                 <span class="button-details__text">Подробнее</span>
                   <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
