Переносит код из master в improvement-master

--- a/source/index.html
+++ b/source/index.html
@@ -169,9 +169,26 @@
           <a href="proposal-6-7.html" target="_blank">Форма создания
             предложения 6-7</a>
         </li>
+        <p>новые версии в текущей ветке improvement-master - переделанные с учетом переноса в эту ветку</p>
+        <li>
+          <a href="proposal-6-7_var2-new.html" target="_blank">Форма создания предложения 6-7 - proposal-6-7_var2-new.html + Дизайн-проекты</a>
+        </li>
+        <li>
+          <a href="proposal-6-7_var3-new.html" target="_blank">Форма создания предложения 6-7 - proposal-6-7_var3-new.html + Дизайн-проекты + Вехи реализации</a>
+        </li>
         <li>
           <a href="proposal-8.html" target="_blank">Форма
             создания предложения 8</a>
+        </li>
+        <p>предыдущие версии с ветки master для проверки</p>
+        <li>
+          <a href="proposal-page-voting-var2.html" target="_blank">Форма создания предложения 6-7 + Открытые Дизайн-проекты - proposal-page-voting-var2.html</a>
+        </li>
+        <li>
+          <a href="proposal-page-voting-var3.html" target="_blank">Форма создания предложения 6-7 + Открытые Дизайн-проекты (кнопка вместо подписи с чекбоксом) - proposal-page-voting-var3.html</a>
+        </li>
+        <li>
+          <a href="proposal-page-voting-var4.html" target="_blank">Форма создания предложения 6-7 + Дизайн-проекты - Вехи реализации -proposal-page-voting-var4.html</a>
         </li>
         <li>
           <a href="proposal-internet.html" target="_blank">Голосование за проведение интернета</a>
@@ -188,6 +205,20 @@
         <li>
           <a href="improvement-list.html" target="_blank">Благоустройство
             разводящая 3</a>
+        </li>
+        <p>новые версии в текущей ветке improvement-master - переделанные с учетом переноса в эту ветку</p>
+        <li>
+          <a href="improvement-list_var2-new.html" target="_blank">Благоустройство разводящая 3 - improvement-list_var2-new.html - Чекбокс + лайк</a>
+        </li>
+        <li>
+          <a href="improvement-list_var3-new.html" target="_blank">Благоустройство разводящая 3 - improvement-list_var3-new.html - Чекбокс</a>
+        </li>
+        <p>предыдущие версии с ветки master для проверки</p>
+        <li>
+          <a href="improvement-list-var2.html" target="_blank">Благоустройство разводящая 3 - improvement-list-var2.html - Вариант с чекбоксом</a>
+        </li>
+        <li>
+          <a href="improvement-list-var3.html" target="_blank">Благоустройство разводящая 3 - improvement-list-var3.html - Вариант с лайком и чекбоксом</a>
         </li>
         <li>
           <a href="improvement-list-with-tabs.html" target="_blank">Благоустройство
