--- a/source/improvement-list-var2.html
+++ b/source/improvement-list-var2.html
@@ -249,7 +249,7 @@
                 </div>
               </div>
               <div
-                class="project__gallery proposal__gallery gallery js-gallery-popup swiper-container swiper-container-initialized swiper-container-horizontal"
+                class="project__gallery proposal__gallery gallery js-gallery-in-popup swiper-container swiper-container-initialized swiper-container-horizontal"
                 style="cursor: grab;">
                 <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                   <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
@@ -405,7 +405,7 @@
                 </div>
               </div>
               <div
-              class="project__gallery opened proposal__gallery gallery js-gallery-popup swiper-container swiper-container-initialized swiper-container-horizontal"
+              class="project__gallery opened proposal__gallery gallery js-gallery-in-popup swiper-container swiper-container-initialized swiper-container-horizontal"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
@@ -561,7 +561,7 @@
                 </div>
               </div>
               <div
-                class="project__gallery proposal__gallery gallery js-gallery-popup swiper-container swiper-container-initialized swiper-container-horizontal"
+                class="project__gallery proposal__gallery gallery js-gallery-in-popup swiper-container swiper-container-initialized swiper-container-horizontal"
                 style="cursor: grab;">
                 <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                   <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
