Корректирует классы у галерей слайдера

--- a/source/proposal-6-7_var2-new.html
+++ b/source/proposal-6-7_var2-new.html
@@ -223,7 +223,7 @@
               </div>
             </div>
             <div
-              class="project__gallery proposal__gallery gallery js-gallery-popup swiper-container swiper-container-initialized swiper-container-horizontal"
+              class="project__gallery proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
@@ -379,7 +379,7 @@
               </div>
             </div>
             <div
-              class="project__gallery proposal__gallery gallery js-gallery-popup swiper-container swiper-container-initialized swiper-container-horizontal opened"
+              class="project__gallery proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal opened"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper opened" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
@@ -535,7 +535,7 @@
               </div>
             </div>
             <div
-              class="project__gallery proposal__gallery gallery js-gallery-popup swiper-container swiper-container-initialized swiper-container-horizontal"
+              class="project__gallery proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
