--- a/source/improvement-list_var2-new.html
+++ b/source/improvement-list_var2-new.html
@@ -407,7 +407,7 @@
               </div>
             </div>
             <div
-              class="project__gallery proposal__gallery gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+              class="project__gallery proposal__gallery gallery js-gallery-in-popup swiper-container swiper-container-initialized swiper-container-horizontal"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
@@ -563,7 +563,7 @@
               </div>
             </div>
             <div
-            class="project__gallery opened proposal__gallery gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+            class="project__gallery opened proposal__gallery gallery js-gallery-in-popup swiper-container swiper-container-initialized swiper-container-horizontal"
             style="cursor: grab;">
             <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
               <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
@@ -719,7 +719,7 @@
               </div>
             </div>
             <div
-              class="project__gallery proposal__gallery gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+              class="project__gallery proposal__gallery gallery js-gallery-in-popup swiper-container swiper-container-initialized swiper-container-horizontal"
               style="cursor: grab;">
               <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                 <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
